--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -319,17 +319,7 @@
                                         <div class="row d-flex justify-content-between">
                                             <div class="col-lg-4 col-md-4 d-flex align-items-center">
                                                 <div class="d-flex align-items-center me-auto new-sale-left">
-                                                    <span class="unlimited-text">Unlimited Minecraft</span>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-4 d-flex align-items-center">
-                                                <div class="d-flex align-items-center mx-auto new-sale-center">
-                                                    <div class="text-center">
-                                                        <h6 class="price-text my-0">
-                                                            <span class="price text-light fw-bold title-dark h1 mb-0">+100&dollar;</span>
-                                                            <span class="h7 align-self-end mb-1">/ first month</span>
-                                                        </h6>
-                                                    </div>
+                                                    <span class="unlimited-text">Custom VPS Plan Are Available</span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-4 d-flex justify-content-between">
@@ -351,20 +341,20 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Zombie Plan</h2>
+                                    <h2 class="mb-4">Plan 1</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>100₹ Per Month</span>
+                                        <span>500₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">2GB</h3>
+                                    <h3 class="text-center mb-4">6GB</h3>
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>10gb SSD Storage <span>NVMe</span></p>
+                                            <p>20gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>AMD EPYC 7B13</span></p>
+                                            <p>Processor <span>AMD EPYC 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -380,20 +370,20 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Skeleton Plan</h2>
+                                    <h2 class="mb-4">Plan 2</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>200₹ Per Month</span>
+                                        <span>600₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">4GB</h3>
+                                    <h3 class="text-center mb-4">8GB</h3>
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>20gb SSD Storage <span>NVMe</span></p>
+                                            <p>50gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>AMD EPYC 7B13</span></p>
+                                            <p>Processor <span>AMD EPYC 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -409,20 +399,20 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Creeper Plan</h2>
+                                    <h2 class="mb-4">Plan 3</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>300₹ Per Month</span>
+                                        <span>800₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">8GB</h3>
+                                    <h3 class="text-center mb-4">12GB</h3>
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>30gb SSD Storage <span>NVMe</span></p>
+                                            <p>80gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>AMD EPYC 7B13</span></p>
+                                            <p>Processor <span>AMD EPYC 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -438,20 +428,20 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Enderman Plan</h2>
+                                    <h2 class="mb-4">Plan 4</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>400₹ Per Month</span>
+                                        <span>1000₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">12GB</h3>
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>40gb SSD Storage <span>NVMe</span></p>
+                                            <p>110gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>AMD EPYC 7B13</span></p>
+                                            <p>Processor <span>AMD EPYC 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -467,20 +457,20 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Husk Plan</h2>
+                                    <h2 class="mb-4">Plan 5</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>500₹ Per Month</span>
+                                        <span>1200₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">24GB</h3>
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>60gb SSD Storage <span>NVMe</span></p>
+                                            <p>140gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>AMD EPYC 7B13</span></p>
+                                            <p>Processor <span>AMD EPYC 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -496,20 +486,49 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Piglin Plan</h2>
+                                    <h2 class="mb-4">Plan 6</h2>
                                     <div class="card-value mb-4 text-center">
                                         <span>600₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">48 gb</h3>
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>100gb SSD Storage <span>NVMe</span></p>
+                                            <p>170gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>AMD EPYC 7B13</span></p>
+                                            <p>Processor <span>AMD EPYC 7</span></p>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <p>Instant <span>Setup</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="text-center">
+                                        <a href="minecraft.html" class="btn">Order now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+						<!-- Plans Seven -->
+                        <div class="col-md-4">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <h2 class="mb-4">Plan 7</h2>
+                                    <div class="card-value mb-4 text-center">
+                                        <span>600₹ Per Month</span>
+                                    </div>
+                                    <h3 class="text-center mb-4">64 gb</h3>
+                                    <div class="row mb-4">
+                                        <div class="col-sm-6">
+                                            <p>200gb SSD Storage <span>NVMe</span></p>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <p>Fast Support <span>24 / 7</span></p>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <p>Processor <span>AMD EPYC 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -528,17 +547,7 @@
                                         <div class="row d-flex justify-content-between">
                                             <div class="col-lg-4 col-md-4 d-flex align-items-center">
                                                 <div class="d-flex align-items-center me-auto new-sale-left">
-                                                    <span class="unlimited-text">Unlimited Premium Minecraft</span>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-4 d-flex align-items-center">
-                                                <div class="d-flex align-items-center mx-auto new-sale-center">
-                                                    <div class="text-center">
-                                                        <h6 class="price-text my-0">
-                                                            <span class="price text-light fw-bold title-dark h1 mb-0">+130&dollar;</span>
-                                                            <span class="h7 align-self-end mb-1">/ first month</span>
-                                                        </h6>
-                                                    </div>
+                                                    <span class="unlimited-text">Custom VPS Plans</span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-4 d-flex justify-content-between">
