--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -319,7 +319,7 @@
                                         <div class="row d-flex justify-content-between">
                                             <div class="col-lg-4 col-md-4 d-flex align-items-center">
                                                 <div class="d-flex align-items-center me-auto new-sale-left">
-                                                    <span class="unlimited-text">Custom VPS Plan Are Available</span>
+                                                    <span class="unlimited-text">Custom VPS Plans Are Available</span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-4 d-flex justify-content-between">
@@ -488,7 +488,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Plan 6</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>600₹ Per Month</span>
+                                        <span>1900₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">48 gb</h3>
                                     <div class="row mb-4">
@@ -517,7 +517,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Plan 7</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>600₹ Per Month</span>
+                                        <span>2300₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">64 gb</h3>
                                     <div class="row mb-4">
@@ -547,7 +547,7 @@
                                         <div class="row d-flex justify-content-between">
                                             <div class="col-lg-4 col-md-4 d-flex align-items-center">
                                                 <div class="d-flex align-items-center me-auto new-sale-left">
-                                                    <span class="unlimited-text">Custom VPS Plans</span>
+                                                    <span class="unlimited-text">Custom VPS Plans Are Available</span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-4 d-flex justify-content-between">
