--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -172,7 +172,7 @@
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>Intel Xeon Platinum</span></p>
+                                            <p>Processor <span>Intel Platinum</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -204,7 +204,7 @@
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>Intel Xeon Platinum</span></p>
+                                            <p>Processor <span>Intel Platinum</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -236,7 +236,7 @@
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>Intel Xeon Platinum</span></p>
+                                            <p>Processor <span>Intel Platinum</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -268,7 +268,7 @@
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>Intel Xeon Platinum</span></p>
+                                            <p>Processor <span>Intel Platinum</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
@@ -288,7 +288,7 @@
                                     <div class="card-value mb-4 text-center">
                                         <span>1900₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">16GB</h3>
+                                    <h3 class="text-center mb-4">64GB</h3>
                                     <div class="row mb-4">
 										<div class="col-sm-6">
                                             <p>12 <span>Core</span></p>
@@ -300,7 +300,7 @@
                                             <p>Fast Support <span>24 / 7</span></p>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p>Processor <span>Intel Xeon Platinum</span></p>
+                                            <p>Processor <span>Intel Platinum</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
