Add Takshu's profile to about.html

--- a/about.html
+++ b/about.html
@@ -153,6 +153,15 @@
                     <div class="card mb-4">
                         <div class="card-body text-center">
                             <img src="assets/images/avatar.svg" class="img-fluid rounded-circle mb-3">
+                            <h4>Takshu</h4>
+                            <p>Founder</p>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-md-3 col-sm-6">
+                    <div class="card mb-4">
+                        <div class="card-body text-center">
+                            <img src="assets/images/avatar.svg" class="img-fluid rounded-circle mb-3">
                             <h4>LEGENDXD</h4>
                             <p>Founder</p>
                         </div>
