--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>SkilloraClouds</title>
 
     <!-- SEO for Homepage -->
+	<meta property="og:title" content="SkilloraClouds" />
+    <meta property="og:description" content="SkilloraClouds Provides Reliable Cloud Hosting Solutions." />
+    <meta property="og:image" content="https://skilloraclouds.site/path-to-image.jpg" />
+    <meta property="og:url" content="https://skilloraclouds.site/" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_us"/>
     <meta name="og:description" content="" />
