--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- SEO for Homepage -->
 	<meta property="og:title" content="SkilloraClouds" />
     <meta property="og:description" content="SkilloraClouds Provides Reliable Cloud Hosting Solutions." />
-    <meta property="og:image" content="https://skilloraclouds.site/path-to-image.jpg" />
+    <meta property="og:image" content="https://skilloraclouds.site/assets/images/logo.png" />
     <meta property="og:url" content="https://skilloraclouds.site/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="website"/>
