--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- SEO for Homepage -->
 	<meta property="og:title" content="SkilloraClouds" />
+	<meta name="description" content="SkilloraClouds provides reliable cloud hosting solutions." />
     <meta property="og:description" content="SkilloraClouds Provides Reliable Cloud Hosting Solutions." />
     <meta property="og:image" content="https://skilloraclouds.site/assets/images/logo.png" />
     <meta property="og:url" content="https://skilloraclouds.site/" />
