--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<meta property="og:title" content="SkilloraClouds" />
 	<meta name="description" content="SkilloraClouds provides reliable cloud hosting solutions." />
     <meta property="og:description" content="SkilloraClouds Provides Reliable Cloud Hosting Solutions." />
-    <meta property="og:image" content="https://skilloraclouds.site/assets/images/logo.png" />
-    <meta property="og:url" content="https://skilloraclouds.site/" />
+    <meta property="og:image" content="https://www.skilloraclouds.site/assets/images/logo.png" />
+    <meta property="og:url" content="https://www.skilloraclouds.site/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_us"/>
