Update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:title" content="SkilloraClouds" />
 	<meta name="description" content="SkilloraClouds provides reliable cloud hosting solutions." />
     <meta property="og:description" content="SkilloraClouds Provides Reliable Cloud Hosting Solutions." />
-    <meta property="og:image" content="https://www.skilloraclouds.site/assets/images/logo.png" />
+    <meta property="og:image" content="https://www.skilloraclouds.site/assets/images/logo2-removebg-preview.png" />
     <meta property="og:url" content="https://www.skilloraclouds.site/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:type" content="website"/>
