Enhance SEO description in index.html
Updated the description meta tag for improved SEO.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO for Homepage -->
 	<meta property="og:title" content="SkilloraClouds" />
-	<meta name="description" content="SkilloraClouds provides reliable cloud hosting solutions." />
+	<meta name="description" content="SkilloraClouds Offers Reliable, High-Performance Cloud Hosting Solutions. Experience 99.9% Uptime, Blazing-Fast Servers, And 24/7 Expert Support." />
     <meta property="og:description" content="SkilloraClouds Provides Reliable Cloud Hosting Solutions." />
     <meta property="og:image" content="https://www.skilloraclouds.site/assets/images/logo2-removebg-preview.png" />
     <meta property="og:url" content="https://www.skilloraclouds.site/" />
