--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Poppins Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Caveate" rel="stylesheet"> 
 
     <!-- OWL Slider v2.3.4 -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
