--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <!-- SEO for Homepage -->
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_us"/>
-    <meta name="og:description" content="" />
-    <meta name="keywords" content="">
+    <meta name="og:description" content="SkilloraClouds Provide Best Hosting Services With 24/7 Customer Support Join Our Host And Powering Your Future." />
+    <meta name="keywords" content="Minecraft Hositng,Vps Hosting,Web Hosting,VDS Hosting">
     <meta name="theme-color" content="#2b2f32"/>
     <meta property="og:site_name" content="SkilloraClouds Hosting"/>
-    <meta property="og:url" content=""/>
-    <meta name="og:image" content=""/>
+    <meta property="og:url" content="https://www.skilloraclouds.site"/>
+    <meta name="og:image" content="assets/css/main.css"/>
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
