--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:locale" content="en_us"/>
     <meta name="og:description" content="SkilloraClouds Provide Best Hosting Services With 24/7 Customer Support Join Our Host And Powering Your Future." />
     <meta name="keywords" content="Minecraft Hositng,Vps Hosting,Web Hosting,VDS Hosting">
-    <meta name="theme-color" content="#2b2f32"/>
+    <meta name="theme-color" content="#008000"/>
     <meta property="og:site_name" content="SkilloraClouds Hosting"/>
     <meta property="og:url" content="https://www.skilloraclouds.site"/>
     <meta name="og:image" content="assets/css/main.css"/>
