--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#008000"/>
     <meta property="og:site_name" content="SkilloraClouds Hosting"/>
     <meta property="og:url" content="https://www.skilloraclouds.site"/>
-    <meta name="og:image" content="assets/css/main.css"/>
+    <meta name="og:image" content="assets/images/logo.png"/>
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
