--- a/counter-strike-global-offensive.html
+++ b/counter-strike-global-offensive.html
@@ -9,12 +9,12 @@
     <!-- SEO for Counter Strike Global Offensive -->
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_us"/>
-    <meta name="og:description" content="" />
-    <meta name="keywords" content="">
-    <meta name="theme-color" content="#2b2f32"/>
-    <meta property="og:site_name" content="Skillora Cloud Hosting"/>
-    <meta property="og:url" content=""/>
-    <meta name="og:image" content=""/>
+    <meta name="og:description" content="Game Hosting" />
+    <meta name="keywords" content="Counter Strike">
+    <meta name="theme-color" content="#008000"/>
+    <meta property="og:site_name" content="SKilloraClouds Hosting"/>
+    <meta property="og:url" content="https://www.skilloraclouds.site"/>
+    <meta name="og:image" content="assets/images/logo.png"/>
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
