--- a/game-servers.html
+++ b/game-servers.html
@@ -9,12 +9,12 @@
     <!-- SEO for Game Servers -->
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_us"/>
-    <meta name="og:description" content="" />
-    <meta name="keywords" content="">
+    <meta name="og:description" content="Join The Fast And Smooth Gaming Exprience!" />
+    <meta name="keywords" content="Game Server Hositng,Minecraft,Rust,Counter Strike">
     <meta name="theme-color" content="#2b2f32"/>
-    <meta property="og:site_name" content="SkilloraCloud Hosting"/>
-    <meta property="og:url" content=""/>
-    <meta name="og:image" content=""/>
+    <meta property="og:site_name" content="SkilloraClouds Hosting"/>
+    <meta property="og:url" content="https://www.skilloraclouds.site"/>
+    <meta name="og:image" content="assets/images/logo.png"/>
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
