--- a/game-servers.html
+++ b/game-servers.html
@@ -11,7 +11,7 @@
     <meta property="og:locale" content="en_us"/>
     <meta name="og:description" content="Join The Fast And Smooth Gaming Exprience!" />
     <meta name="keywords" content="Game Server Hositng,Minecraft,Rust,Counter Strike">
-    <meta name="theme-color" content="#2b2f32"/>
+    <meta name="theme-color" content="#008000"/>
     <meta property="og:site_name" content="SkilloraClouds Hosting"/>
     <meta property="og:url" content="https://www.skilloraclouds.site"/>
     <meta name="og:image" content="assets/images/logo.png"/>
